# tg-whisper

./: .gitignore  docker-compose.yml  pyproject.toml
docs/: README.md  architecture-review.md  backend_to_llm_integration_details.md  product_concept.md  product_description.md  progress.md  whisper.cpp_instruction.md
docs/services/: telegram-bot-backend.md  telegram-bot-consumer.md  whisper-consumer.md  whisper-model.md
notebooks/: alignment.py  speaker_change_detection.py
telegram-bot-backend/: .dockerignore  Dockerfile  main.py  pyproject.toml
telegram-bot-consumer/: Dockerfile  main.py  pyproject.toml
whisper-benchmark/: config.json  config3.json  main.py
whisper-benchmark/app/: __init__.py  benchmark.py  config.py
whisper-benchmark/app/loaders/: __init__.py  dataset_loader.py  local_dataset_loader.py
whisper-benchmark/app/models/: __init__.py  faster_whisper_model.py  whisperx_model.py
whisper-benchmark/app/utils/: __init__.py  audio_processor.py  gpu_monitor.py  metrics.py  results_analyzer.py
whisper-consumer/: Dockerfile  batch_processor.py  batch_task.py  config.json  config.py  main.py  pyproject.toml  transcription.py
whisper-model/: pyproject.toml
whisper-model/src/whisper_model/: __init__.py  config.py  suppress_std.py  text_formatter.py  whisperx_model.py
whisper-server/: config.json  main.py  pyproject.toml
whisper-server/app/: __init__.py  api.py  config.py  models.py  service.py
