[project]
name = "tgwhisper-monorepo"
version = "0.1.0"
description = "Monorepo для whisper-server, whisper-benchmark, telegram-bot-backend"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
    "torch <=2.2.2",
    "python-dotenv>=1.1.0",
    "requests>=2.31.0",
    "numpy<2",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "jiwer>=3.0.3",
    "pydantic>=2.0.0",
    "tqdm>=4.66.0",
    "soundfile",
    "audioread",
    "torchvision>=0.17.2",
    "torchaudio<=2.2.2",
    "python-levenshtein>=0.27.1",
    "aiogram>=3.0.0,<4.0.0",
    "aiohttp>=3.11.18",
    "datasets>=3.5.1",
    "librosa>=0.11.0",
    "whisperx>=3.2.0",
    "pynvml>=12.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "ruff>=0.0.285"
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch       = [{ index = "pytorch-cu121" }]
torchvision = [{ index = "pytorch-cu121" }]
torchaudio  = [{ index = "pytorch-cu121" }] 
